# clairo

./: .dockerignore  .env.example  .env.production.template  .env.staging.template  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  README.md  TODOS.md  clairo.code-workspace  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_auth_multitenancy.py  002_xero_oauth.py  003_xero_sync.py  004_xero_payroll.py  005_quality_scoring.py  006_bas_workflow.py  007_fix_bas_user_fks.py  008_bas_audit_log.py  009_add_lodgement_fields.py  010_knowledge_base.py  011_chat_conversations.py  012_client_ai_aggregations.py  013_client_chat_context.py  014_fix_client_fk.py  015_aggregation_connection_id.py  016_agent_audit_tables.py  017_insights_table.py  018_insight_action_deadline.py  019_action_items.py  020_action_items_notes.py  021_triggers.py  022_magic_zone_insights.py  023_billing_subscription.py  024_auth_clerk_id_lookup.py  025_usage_tracking.py  026_onboarding.py  027_xpm_client_auth.py  028_oauth_client_fields.py  029_feature_flag_overrides.py  030_xero_reports.py  031_xero_transactions.py  032_spec_025_fixed_assets_enhanced_analysis.py  033_spec_030_client_portal.py  034_spec_032_pwa_tables.py  035_notifications.py  20260103_095059_54ae5071be1b_add_recipient_email_to_document_requests.py  20260103_101200_add_primary_contact_email_to_xero_connections.py  20260104_121611_688ec7c374ee_merge_notifications_and_portal_.py  20260208_035_add_bulk_import_organizations.py  20260209_add_unknown_to_journal_source_type.py  (+33 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/core/: __init__.py  ai_usage.py  audit.py  cache.py  constants.py  dependencies.py  events.py  exceptions.py  feature_flags.py  file_processor.py  logging.py  pinecone_service.py  security.py  tenant_context.py  voyage.py
backend/app/core/a2ui/: __init__.py  audit.py  builder.py  device.py  schemas.py
backend/app/modules/: __init__.py
backend/app/modules/_template/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/action_items/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/admin/: __init__.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  usage_service.py
backend/app/modules/agents/: __init__.py  a2ui_generator.py  a2ui_llm.py  audit.py  dependencies.py  exceptions.py  models.py  orchestrator.py  perspective_detector.py  prompts.py  query_agent.py  router.py  schemas.py  settings.py  summary_agent.py
backend/app/modules/auth/: __init__.py  audit_events.py  clerk.py  middleware.py  models.py  permissions.py  rate_limit.py  repository.py  router.py  schemas.py  service.py  webhooks.py
backend/app/modules/bas/: __init__.py  a2ui_generator.py  audit_events.py  calculator.py  classification_constants.py  classification_models.py  classification_schemas.py  classification_service.py  csv_exporter.py  deadline_notification_service.py  exceptions.py  exporter.py  lodgement_exporter.py  lodgement_service.py  models.py  repository.py  router.py  schemas.py  service.py  tax_code_service.py  utils.py  workboard_service.py
backend/app/modules/billing/: __init__.py  exceptions.py  middleware.py  models.py  repository.py  router.py  schemas.py  service.py  stripe_client.py  usage_alerts.py  webhooks.py
backend/app/modules/clients/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/dashboard/: __init__.py  a2ui_generator.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/feedback/: __init__.py  enums.py  exceptions.py  models.py  prompts.py  repository.py  router.py  schemas.py  service.py  transcription.py
backend/app/modules/insights/: __init__.py  a2ui_generator.py  dedup.py  evidence.py  exceptions.py  generator.py  models.py  router.py  schemas.py  service.py  thresholds.py
backend/app/modules/integrations/: __init__.py
backend/app/modules/knowledge/: __init__.py  aggregation_models.py  aggregation_repository.py  aggregation_service.py  chatbot.py  chunker.py  client_chat_router.py  client_chat_schemas.py  client_chatbot.py  collections.py  context_builder.py  document_processor.py  domains.py  ingestion_manager.py  intent_detector.py  models.py  repository.py  router.py  schemas.py  service.py  token_budget.py
backend/app/modules/notifications/: __init__.py  email_service.py  models.py  router.py  schemas.py  service.py  templates.py
backend/app/modules/onboarding/: __init__.py  events.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/portal/: __init__.py  classification_router.py  dependencies.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/productivity/: __init__.py  router.py
backend/app/modules/quality/: __init__.py  calculator.py  issue_detector.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/queries/: __init__.py  router.py  schemas.py
backend/app/tasks/: __init__.py  aggregation.py  bas.py  celery_app.py  insights.py  knowledge.py  quality.py  reports.py  scheduler.py  tax_planning.py  tax_strategy_authoring.py  triggers.py  usage.py  xero.py  xero_writeback.py
backend/scripts/: backfill_bm25.py  check_strategy_yamls.py  import_tax_strategies_from_pdfs.py  ingest_ato_local.py  ingest_local.py  ingest_tax_planning_local.py  regenerate_empty_implementations.py  seed_knowledge_sources.py  sync_strategies_from_yaml.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py  test_xero_sync_e2e.py
backend/tests/factories/: __init__.py  auth.py  bas.py  portal.py  tax_planning.py  xero.py
backend/tests/fixtures/: fake_anthropic.py
backend/tests/integration/: __init__.py  test_rls_policies.py
backend/tests/unit/: __init__.py
(+1495 files in other folders)
